# mlir-exercise

./: CMakeLists.txt  README.md
toy/ch2/: toyc.cpp
toy/ch2/include/toy/: Dialect.h  Ops.cpp  Ops.td
toy/ch2/mlir/: Dialect.cpp
toy/ch3/include/toy/: Ops.td
toy/ch3/mlir/: MLIRGen.cpp
toy/ch4/include/toy/: MLIRGen.h
toy/ch4/mlir/: Dialect.cpp
toy/ch5/include/toy/: Ops.td
toy/ch5/mlir/: ShapeInferencePass.cpp  ToyCombine.cpp  ToyCombine.td
toy/ch6/: toyc.cpp
toy/ch7/include/toy/: Dialect.h  Ops.td  ShapeInferenceInterface.td
toy/ch7/mlir/: Dialect.cpp  LowerToAffineLoops.cpp  LowerToLLVM.cpp  MLIRGen.cpp  ToyCombine.cpp
